--- a/src/app/books/books.component.css
+++ b/src/app/books/books.component.css
@@ -1,8 +1,34 @@
 .example-card {
   max-width: 400px;
+  padding:20px;
+  margin-left:20px;
 }
 
 .example-header-image {
-  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-  background-size: cover;
+  /* background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+  background-size: cover;*/
+  margin: 0 15px 5px 0;
 }
+.book {
+  display: flex;
+  flex-wrap:wrap;
+  justify-content:flex-start;
+  font-family: sans-serif;
+  align-items: center;
+  margin: 10px auto;
+  padding: 0 16px;
+
+
+}
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+img {
+  border-radius: 50%;
+  width:5vw;
+  height:10vh;
+
+}
+
