--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,30 +1,28 @@
-<div>
+<div class="container">
+  <div class="book">
 
-  <button type="button" (click)="clear;getBooks()">get</button>
-  
-  <div *ngFor="let book of books">
-    <p>ppppppppppppppp</p>
-    <mat-card class="example-card">
-      <mat-card-header>
-        <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>Shiba Inu</mat-card-title>
-        <mat-card-subtitle>Dog Breedz{{book.title}}</mat-card-subtitle>
-      </mat-card-header>
-      <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-      <mat-card-content>
-        <p>
-          {{book.Description}}
-        </p>
-      </mat-card-content>
-      <mat-card-actions>
+    <!--<button type="button" (click)="clear;getBooks()">get</button>-->
+    <div *ngFor="let book of Books">
+      <mat-card class="example-card">
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image"><img mat-card-image src="{{book.Cover}}" alt="Book Cover"></div>
+          <mat-card-title>{{book.Title}}</mat-card-title>
+          <mat-card-subtitle>{{book.DateOfPublication}}</mat-card-subtitle>
+        </mat-card-header>
+        
+        <mat-card-content>
+          <p>
+            {{book.Description}}
+          </p>
+        </mat-card-content>
+        <!--<mat-card-actions>
         <button mat-button>LIKE</button>
         <button mat-button>SHARE</button>
-      </mat-card-actions>
-    </mat-card>
+      </mat-card-actions>-->
+      </mat-card>
 
+    </div>
+    </div>
 
   </div>
-</div>
-
-
 
